--- a/corte3.html
+++ b/corte3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RECREACION</title>
+    <title>CORTE 3</title>
 
     <!-- Fuentes de Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,6 @@
             <li><a href="corte2.html">2 Corte</a></li>
             <li><a href="corte3.html">3 Corte</a></li>
         </div>
-
     </ul>
 
     <!-- Contenido principal -->
